...
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <!-- Collapsing Toolbar - Taller, No Title -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">
...
                app:layout_collapseMode="parallax"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

                <!-- Welcome Message above logo -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Hello, Jacob!"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
...
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- View Rewards Box -->
            <androidx.cardview.widget.CardView
                android:id="@+id/boxViewRewards"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
...
